--- a/site/src/components/docs/demos/time-slider/react/css/WithParts.css
+++ b/site/src/components/docs/demos/time-slider/react/css/WithParts.css
@@ -46,7 +46,7 @@
   top: 0;
   left: 0;
   height: 100%;
-  width: var(--media-slider-fill);
+  width: var(--media-slider-preview, var(--media-slider-fill));
   background: white;
   border-radius: 9999px;
 }
